// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Swap/useGetSwapInfo/useGetTokenCombinations returns all possible combinations between the tokens provided and the base trade ones 1`] = `
Array [
  Array [
    Token {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "chainId": 97,
      "decimals": 6,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "USDT",
    },
    Token {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "UNI",
    },
  ],
  Array [
    Token {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "chainId": 97,
      "decimals": 6,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "USDT",
    },
    Token {
      "address": "0xb4fbf271143f4fbf7b91a5ded31805e42b2208d6",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "WETH",
    },
  ],
  Array [
    Token {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "UNI",
    },
    Token {
      "address": "0xb4fbf271143f4fbf7b91a5ded31805e42b2208d6",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "WETH",
    },
  ],
]
`;

exports[`pages/Swap/useGetSwapInfo/useGetTokenCombinations uses wBNB when BNB is provided 1`] = `
Array [
  Array [
    Token {
      "address": "0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6",
      "chainId": 5,
      "decimals": 18,
      "name": undefined,
      "symbol": "WETH",
    },
    Token {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "chainId": 5,
      "decimals": 18,
      "name": undefined,
      "symbol": "UNI",
    },
  ],
  Array [
    Token {
      "address": "0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6",
      "chainId": 5,
      "decimals": 18,
      "name": undefined,
      "symbol": "WETH",
    },
    Token {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "chainId": 5,
      "decimals": 6,
      "name": undefined,
      "symbol": "USDT",
    },
  ],
  Array [
    Token {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "chainId": 5,
      "decimals": 18,
      "name": undefined,
      "symbol": "UNI",
    },
    Token {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "chainId": 5,
      "decimals": 6,
      "name": undefined,
      "symbol": "USDT",
    },
  ],
]
`;

exports[`pages/Swap/useGetSwapInfo/useGetTokenCombinations uses wETH when BNB is provided 1`] = `
Array [
  Array [
    Token {
      "address": "0xb4fbf271143f4fbf7b91a5ded31805e42b2208d6",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "WETH",
    },
    Token {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "UNI",
    },
  ],
  Array [
    Token {
      "address": "0xb4fbf271143f4fbf7b91a5ded31805e42b2208d6",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "WETH",
    },
    Token {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "chainId": 97,
      "decimals": 6,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "USDT",
    },
  ],
  Array [
    Token {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "chainId": 97,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "UNI",
    },
    Token {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "chainId": 97,
      "decimals": 6,
      "isNative": false,
      "isToken": true,
      "name": undefined,
      "projectLink": undefined,
      "symbol": "USDT",
    },
  ],
]
`;
